--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "Olivier F. Goulet",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "uuid": "^8.3.0"
   }
 }
