--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "feedback-api",
   "version": "0.0.1",
   "description": "Receives user feedback from the Feedback embedded API",
-  "main": "index.js",
+  "main": "start.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node start.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -21,5 +21,10 @@
     "multer": "^1.4.2",
     "path": "^0.12.7",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/register": "^7.10.5"
   }
 }
